--- a/app/blocks/footer/footer.styl
+++ b/app/blocks/footer/footer.styl
@@ -4,7 +4,7 @@
 	padding-bottom 40px
 	color #6a6a6a
 	background-color #000
-	// opacity .6
+	opacity .6
 	
 	&__block_top
 		position relative
@@ -51,7 +51,7 @@
 .menu-group
 	display inline-block
 	
-	margin-right 107px //
+	margin-right 13.8243% // 107px
 	text-align left
 	
 	padding-x(8px)
