--- a/app/blocks/main/main.styl
+++ b/app/blocks/main/main.styl
@@ -4,7 +4,7 @@
 	display block
 	
 	&__row
-		// opacity .6
+		opacity .8
 		
 		&_featured
 			padding-top 40px
@@ -13,7 +13,7 @@
 			padding-top 28px
 		
 		&_brands
-			padding-top 52px
+			padding-top 53px
 			
 		&_testimonials
 			padding-top 89px
@@ -115,7 +115,7 @@
 			background-image url('../images/support.png')
 
 	&__text
-		font-size 1.5em
+		font-size 1.875em // 1.5em
 		font-weight 600
 		line-height 1.6
 		text-transform uppercase
