--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -123,7 +123,7 @@
 		text-align center
 		color #fff
 
-.currency-selector
+/* .currency-selector
 	position relative
 	float right
 	
@@ -141,7 +141,6 @@
 		height 100%
 		
 		padding-left 100%
-		// visibility hidden
 		background-color transparent
 		border 1px none
 		outline none
@@ -165,6 +164,49 @@
 			width 8px
 			height 4px
 			content ''
-			background url('../images/down.png') no-repeat
+			background url('../images/down.png') no-repeat */
+			
+.currency-selector
+	position relative
+	float right
+	min-width 6.125em
+	
+	margin-top .75em
+	margin-left 48px //
+	
+	&::after
+		position absolute
+		top 1em
+		right .625em
+		width 8px
+		height 4px
+		content ''
+		background url('../images/down.png') no-repeat 
+	
+	&__selector
+		display none
+		
+	&__value
+		display none
+		
+		padding-left 1.16em
+		padding-right 2.5em
+		padding-y(.83em)
+		
+		font-size .75em
+		font-weight 600
+		line-height 1.25
+		color #fff
+		
+		text-align left
+		text-transform uppercase
+		background-color #000
+		
+		&:hover
+			opacity .8
+		
+		&_display_block
+			display block
+		
 
 
