--- a/app/blocks/product/product.styl
+++ b/app/blocks/product/product.styl
@@ -16,13 +16,13 @@
 		
 	&__sale
 		position absolute
-		top 15px
-		left 15px
+		top 1em
+		left 1em
 		width 2.73em
 		height 2.73em
 		
-		max-width 25%
-		max-height 21.4286%
+		max-width 60px // 25%
+		max-height 60px // 21.4286%
 		
 		padding 3.33%
 		font-size 1.375em
@@ -40,16 +40,19 @@
 			line-height 1
 			vertical-align middle
 		
+		
 	&__button
 		position absolute
 		left 50%
 		bottom 16.5%
-		font-size .875em
+		font-size 14px
 		line-height 2
 		color #fff
 		
 		padding .43em 1em // 6px 14px
 		transform translate(-50%)
+		
+
 		
 		&_add-to-card
 			bottom 0
