--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -2,6 +2,8 @@
 	position relative
 	display block
 	overflow hidden
+	min-width 1040px
+	min-height 500px
 	
 	padding-bottom 48.0556%
 	outline 1px solid green
