--- a/app/blocks/layout-column/layout-column.styl
+++ b/app/blocks/layout-column/layout-column.styl
@@ -13,7 +13,9 @@
 		margin-right 0
 
 .col-1-4
-	// width 25%
+	width 25%
+		
+.col-1-4_products
 		
 	width 23.8095%
 	
@@ -33,3 +35,18 @@
 	
 .col-2-5
 	width 40%
+	
+@media all and (max-width: 1130px)
+	.col-1-6_brands
+		width 33.3333%
+		
+		
+	.col-1-4_products
+		width 32.25%
+		
+		&:nth-child(4n)
+			margin-right 1.5873%
+			
+		&:nth-child(3n)
+			margin-right 0
+
