--- a/app/blocks/main/main.jade
+++ b/app/blocks/main/main.jade
@@ -8,7 +8,17 @@ include ../product/product
 mixin main()
 	+b('main').main&attributes(attributes)
 
-		- var slides = [{src: './assets/images/slide-2.png'}, {src: './assets/images/slide-33.png'}, {src: './assets/images/slide-4.png'}, {src: './assets/images/slide-53.png'}];
+		- var mainData = getData('data-main');
+
+		- var slides = mainData.slides;
+
+		- var featured = mainData.featured;
+
+		- var products = mainData.products;
+
+		- var brands = mainData.brands;
+
+		- var testimonials = mainData.testimonials;
 		
 		+slider(slides)
 		section.support.main__row.main__row_support
@@ -32,8 +42,6 @@ mixin main()
 		section.featured.main__row.main__row_featured
 			+title('HandPicked')(class='featured__title')
 
-			- var featured = [{link: {href: 'javascript:void(0)', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-1_sm.png', alt: 'Some info'}, button: 'Shop now'}, {link: {href: 'javascript:void(0)', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-2_sm.png', alt: 'Some info'}}, {link: {href: 'javascript:void(0)', target: '_blank', class: 'featured__product featured__product_lg'}, img: {src: './assets/images/featured-3_lg.png', alt: 'Some info'}}, {link: {href: 'javascript:void(0)', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-4_sm.png', alt: 'Some info'}}, {link: {href: 'javascript:void(0)', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-5_sm.png', alt: 'Some info'}}];
-
 			+container
 				ul.col-1-3.featured__col.featured__col_sm
 					li.featured__item
@@ -52,28 +60,24 @@ mixin main()
 		section.recent-products.main__row.main__row_recent-products
 			+title('Summer Collection')(class='recent-products__title')
 
-			- var products = [{link: {href: 'javascript:void(0)', target: '_blank', class: 'products__product'}, img: {src: './assets/images/product-1.png', alt: 'Some info'}, sale: '20', button: '+ Add to cart'}, {link: {href: 'javascript:void(0)', class: 'products__product'}, img: {src: './assets/images/product-2.png', alt: 'Some info'}, button: '+ Add to cart'}, {link: {href: 'javascript:void(0)', class: 'products__product'}, img: {src: './assets/images/product-3.png', alt: 'Some info'}, button: '+ Add to cart'}, {link: {href: 'javascript:void(0)', class: 'products__product'}, img: {src: './assets/images/product-4.png', alt: 'Some info'}, sale: '40', button: '+ Add to cart'}, {link: {href: 'javascript:void(0)', class: 'products__product'}, img: {src: './assets/images/product-5.png', alt: 'Some info'}, sale: '20', button: '+ Add to cart'}, {link: {href: 'javascript:void(0)', class: 'products__product'}, img: {src: './assets/images/product-6.png', alt: 'Some info'}, button: '+ Add to cart'}, {link: {href: 'javascript:void(0)', class: 'products__product'}, img: {src: './assets/images/product-7.png', alt: 'Some info'}, button: '+ Add to cart'}, {link: {href: 'javascript:void(0)', class: 'products__product'}, img: {src: './assets/images/product-8.png', alt: 'Some info'}, sale: '40', button: '+ Add to cart'}];
-
 			+container
 				ul.products
 					for product in products
-						li.products__item.col-1-4
+						li.products__item.col-1-4_products
 							+product(product, 'product__button_add-to-card')
 				
 		section.brands.main__row.main__row_brands
-			+title('Our Brand')(class='brands__title')
-			+container
-				- var brands = [{src: './assets/images/brand-bakery.png', alt: 'Bakery'}, {src: './assets/images/brand-cavalier.png', alt: 'Cavalier'}, {src: './assets/images/brand-harvest.png', alt: 'Harvest'}, {src: './assets/images/brand-landlock.png', alt: 'Landlock'}, {src: './assets/images/brand-spectrum.png', alt: 'Spectrum'}, {src: './assets/images/brand-home-energy.png', alt: 'Home Energy'}];
+			+title('Our Brands')(class='brands__title')
+			+container.brands__container
 				
 				each i in brands
-					+layout-column(class='brands__column col-1-' + brands.length)
+					+layout-column(class='brands__column col-1-6_brands')
 						.brand
 							img.brand__img(src=i.src alt=i.alt)
 
 		section.testimonials.main__row.main__row_testimonials
 			+title('Customers Says')(class='testimonials__title')
 			+container(class='testimonials__container')
-				- var testimonials = [{photo: './assets/images/SandraDewi.png', txt: 'Sed ut perspiciatis <br> unde omnis iste natus error sit <br> voluptatem accusantium doloremque', authorName: 'Sandra Dewi', authorJob: 'Fashion stylish'}, {photo: './assets/images/ShaheerSheikh.png', txt: 'Sed ut perspiciatis <br> unde omnis iste natus error sit <br> voluptatem accusantium doloremque', authorName: 'Shaheer Sheikh', authorJob: 'Designer'}];
 				
 				+layout-column.testimonials__column.col-1-2
 					+testimonial(testimonials[0])
