--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -26,9 +26,11 @@ body
 	font-family 'Lato', sans-serif 
 	font-weight 400
 	line-height 1.5
-	background url('../images/shophia.jpg') no-repeat 0 0
-		 
-	
+	// background url('../images/shophia.jpg') no-repeat 0 0
+		
+	@media all and (max-width: 1220px)
+		font-size .875em
+			
 a
 	color inherit
 	text-decoration none
