--- a/app/blocks/header/header.jade
+++ b/app/blocks/header/header.jade
@@ -4,7 +4,7 @@ include ../list/list
 mixin header()
 	+b('header').header&attributes(attributes)
 
-			- var headerData = getData('data');
+			- var headerData = getData('data-header');
 
 			- var topBar = headerData.topBar;
 
