--- a/app/blocks/footer/footer.jade
+++ b/app/blocks/footer/footer.jade
@@ -4,13 +4,17 @@ include ../social/social
 mixin footer()
 	+b('footer').footer&attributes(attributes)
 
-		- var shops = [{aLink: {href: 'javascript:void(0)'}, value: 'New In'}, {aLink: {href: 'javascript:void(0)'}, value: 'Women'}, {aLink: {href: 'javascript:void(0)'}, value: 'Men'}, {aLink: {href: 'javascript:void(0)'}, value: 'Shoes'}, {aLink: {href: 'javascript:void(0)'}, value: 'Bags & Accessories'}, {aLink: {href: 'javascript:void(0)'}, value: 'Top Brands'}, {aLink: {href: 'javascript:void(0)'}, value: 'Sale & Special Offers'}, {aLink: {href: 'javascript:void(0)'}, value: 'Lookbook'}];
+		- var footerData = getData('data-footer');
 
-		- var information = [{aLink: {href: 'javascript:void(0)'}, value: 'About Us'}, {aLink: {href: 'javascript:void(0)'}, value: 'Customer Service'}, {aLink: {href: 'javascript:void(0)'}, value: 'New Collection'}, {aLink: {href: 'javascript:void(0)'}, value: 'Best Sellers'}, {aLink: {href: 'javascript:void(0)'}, value: 'Manufacturers'}, {aLink: {href: 'javascript:void(0)'}, value: 'Privacy policy'}, {aLink: {href: 'javascript:void(0)'}, value: 'Terms & Condition'}, {aLink: {href: 'javascript:void(0)'}, value: 'Blog'}];
+		- var shops = footerData.shops;
 
-		- var customerService = [{aLink: {href: 'javascript:void(0)'}, value: 'Search Terms'}, {aLink: {href: 'javascript:void(0)'}, value: 'Advanced Search'}, {aLink: {href: 'javascript:void(0)'}, value: 'Orders and Returns'}, {aLink: {href: 'javascript:void(0)'}, value: 'Contact Us'}, {aLink: {href: 'javascript:void(0)'}, value: 'RSS'}, {aLink: {href: 'javascript:void(0)'}, value: 'Help & FAQs'}, {aLink: {href: 'javascript:void(0)'}, value: 'Consultant'}, {aLink: {href: 'javascript:void(0)'}, value: 'Store Locations'}];
+		- var information = footerData.information;
 
-		- var social = [{link: {href: '#', target: '_blank'}, img: {src: './assets/images/social-footer-fb.png', alt: 'fb'}}, {link: {href: '#', target: '_blank'}, img: {src: './assets/images/social-footer-twitter.png', alt: 'twitter'}}, {link: {href: '#', target: '_blank'}, img: {src: './assets/images/social-footer-instagram.png', alt: 'instagram'}}, {link: {href: '#', target: '_blank'}, img: {src: './assets/images/social-footer-pinterest.png', alt: 'pinterest'}}, {link: {href: '#', target: '_blank'}, img: {src: './assets/images/social-footer-feed.png', alt: 'feed'}}];
+		- var customerService = footerData.customerService;
+
+		- var footerSocial = footerData.footerSocial;
+
+		- var payments = footerData.payments;
 		
 		.footer__block_top
 			+container(class='footer__container_block-top')
@@ -28,7 +32,7 @@ mixin footer()
 
 					.footer__col.menu-group.menu-group_connected
 						h2.menu-group__title= 'Stay connected'
-						+social(social, 'footer__')(class='footer__social')
+						+social(footerSocial, 'footer__')(class='footer__social')
 
 						h2.menu-group__title!= 'Subscribe <i class="menu-group__title_italic"> to </i> our newsletter'
 						form.form(method='post' action='')
@@ -36,8 +40,6 @@ mixin footer()
 							button.button.form__button(type='submit')= 'Subscribe'
 
 		.footer__block_bottom
-
-			- var payments =[{src: './assets/images/payment-visa.png', alt: 'Visa'}, {src: './assets/images/payment-mastercard.png', alt: 'MasterCard'}, {src: './assets/images/payment-american.png', alt: 'American Express'}, {src: './assets/images/payment-discover.png', alt: 'Discover'}];
 
 			+container
 				hr.horizontal-line
