Convert support items to json

--- a/app/blocks/header/header.jade
+++ b/app/blocks/header/header.jade
@@ -19,8 +19,7 @@ mixin header()
 			section.header__header
 				+container.header__container_header
 					nav.main-menu
-						// img.main-menu__button(alt='MENU' src='./assets/images/menu.png')
-						.main-menu__button_txt menu
+						.main-menu__button menu
 						+list(mainMenu, 'main-menu__')(class='main-menu__menu')
 
 					// .cart
