--- a/app/blocks/main/main.styl
+++ b/app/blocks/main/main.styl
@@ -80,16 +80,16 @@
 		background-size 100% 100%
 		outline 1px dotted green
 		
-		&_left
+		&_shipping
 			padding-left 23.2558%
 			background-image url('../images/support-left.png')
 			
 			
-		&_center
+		&_return
 			padding-left 28.0702% // 128px / 456px
 			background-image url('../images/support-center.png')
 			
-		&_right
+		&_support
 			padding-left 32.7907% // 141px / 430px
 			background-image url('../images/support-right.png')
 	
