Change variables in stylus

--- a/app/blocks/container/container.styl
+++ b/app/blocks/container/container.styl
@@ -1,7 +1,7 @@
 .container
 	display block
-	min-width 1040px
-	max-width 1440px
+	min-width $base_container_min-width
+	max-width $base_container_max-width
 		
 	margin 0 auto
 	padding-x(75px)
