--- a/app/blocks/main/main.jade
+++ b/app/blocks/main/main.jade
@@ -60,7 +60,7 @@ mixin main()
 				ul.products
 					for product in products
 						li.products__item.col-1-4_products
-							+product(product, 'product__button_add-to-card')
+							+product(product, 'product__button_cart')
 				
 		section.brands.main__row.main__row_brands
 			+title('Our Brands')(class='brands__title')
