--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -29,7 +29,7 @@ body
 	// background url('../images/shophia.jpg') no-repeat 0 0
 		
 	@media all and (max-width: 1220px)
-		font-size .875em
+		font-size $sm_font_size_ems
 			
 a
 	color inherit
