--- a/app/styles/helpers/variables.styl
+++ b/app/styles/helpers/variables.styl
@@ -3,7 +3,11 @@ $center_color = ''
 $text_color = ''
 $link_color = ''
 $base_font_size = 16px
+$sm_font_size = 14px
 $base_font_size_ems = unit($base_font_size / 16, em)
+$sm_font_size_ems = unit($sm_font_size / 16, em)
 $px_em = unit(1 / $base_font_size, em)
-$base_container_width = 1000
-$base_container_width_em = unit($base_container_width/$base_font_size, em)
+$base_container_max-width = 1440px
+$base_container_min-width = 1040px
+$base_container_max-width_em = unit($base_container_max-width/$base_font_size, em)
+$base_container_min-width_em = unit($base_container_min-width/$base_font_size, em)
