--- a/app/blocks/product/product.styl
+++ b/app/blocks/product/product.styl
@@ -11,8 +11,7 @@
 		top 0
 		left 0
 		min-width 100%
-		height 100%
-		
+		height 100%	
 		
 	&__sale
 		position absolute
@@ -25,7 +24,7 @@
 		max-height 60px // 21.4286%
 		
 		padding 3.33%
-		font-size 1.375em
+		font-size 22px // 1.375em
 		line-height 1.8182
 		color #fff
 		
@@ -36,10 +35,9 @@
 		
 		&_percent
 			margin-left -.36em
-			font-size .5em
+			font-size 11px // .5em
 			line-height 1
-			vertical-align middle
-		
+			vertical-align middle	
 		
 	&__button
 		position absolute
@@ -52,12 +50,16 @@
 		padding .43em 1em // 6px 14px
 		transform translate(-50%)
 		
-
+		&:hover
+			opacity .8
 		
-		&_add-to-card
+		&_cart
 			bottom 0
 			padding .71em .57em .28em // 10px 8px 0
 			background-color #000
+			
+			&:hover
+				opacity .8
 		
 			&::before
 				position absolute
@@ -71,14 +73,11 @@
 				border-bottom-color #000
 				
 			&::after
-				position absolute
-				top -1px
+				
+				@extends .product__button_cart::before
+					
 				left 100%
-				width 0
-				height 0
-				content ''
-				border 1.71em solid transparent
 				border-left-color #000
-				border-bottom-color #000
-			
+				border-right-color transparent
+				
 				
