--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -7,22 +7,22 @@
 	
 	padding-bottom 48.0556%
 	outline 1px solid green
-	// opacity .6
 	
 	&__item
 		position absolute
 		top 0
 		left 0
-		// display none
 		width 100%
 		height 100%
 		outline 1px dashed tomato
 		opacity 0
-		transition(opacity 1.5s ease-in-out)
+		
+		visibility hidden
+		transition(all 1.5s ease-in-out)
 		
 		
 		&_active
-			// display block
+			visibility visible
 			opacity 1
 		
 		
@@ -74,13 +74,15 @@
 	&__caption_img
 		display block
 		width 19.2361% // 277px
-		// height 43.0124% // 277px
 		
 	&__button
 		position absolute
 		left 50%
 		bottom 90px
 		transform translate(-50%)
+		
+		&:hover
+			background-color lightness(#f2a471, 60%)
 		
 .slider-nav
 	&__bullet
