--- a/app/blocks/container/container.styl
+++ b/app/blocks/container/container.styl
@@ -1,7 +1,9 @@
 .container
 	display block
-	min-width $base_container_min-width
-	max-width $base_container_max-width
+	// min-width $base_container_min-width
+	// max-width $base_container_max-width
+		
+	width $base_container_max-width
 		
 	margin 0 auto
 	padding-x(75px)
