--- a/app/blocks/footer/footer.styl
+++ b/app/blocks/footer/footer.styl
@@ -1,10 +1,11 @@
 .footer
 	display block
+	min-width $base_container_min-width
 	
 	padding-bottom 40px
 	color #6a6a6a
 	background-color #000
-	// opacity .6
+	opacity .6
 	
 	&__block_top
 		position relative
@@ -72,6 +73,9 @@
 		line-height 2.1429
 		color #6a6a6a
 		
+		&:hover
+			color #fff
+		
 		@media all and (max-width: 1220px)
 			font-size 1em
 		
@@ -80,6 +84,9 @@
 		
 	&_service
 		margin-right 9.4901% // 123px
+		
+		@media all and (max-width: 1230px)
+			margin-right 8.5365% // 105px
 		
 	&_connected
 		margin-right 0
@@ -114,6 +121,9 @@
 		font-size .75em
 		color #fff
 		background-color #363636
+		
+		&:hover
+			opacity .8
 
 .copyright
 	font-size 11px
@@ -145,6 +155,10 @@
 	margin-right 3px
 	background-color #000
 	border-radius 4px
+	transition(all .3s ease 0s)
+	
+	&:hover
+		background-color #363636
 	
 	&__link
 		display inline-block
