Change margin footer_menu-group

--- a/app/blocks/footer/footer.styl
+++ b/app/blocks/footer/footer.styl
@@ -50,7 +50,7 @@
 .menu-group
 	display inline-block
 	
-	margin-right 8.2562% // 107px
+	margin-right 8.062% // 104px // 8.2562% - 107px
 	vertical-align top
 	
 	padding-x(8px)	
@@ -83,7 +83,7 @@
 		margin-right 7.7932% // 101px
 		
 	&_service
-		margin-right 9.4901% // 123px
+		margin-right 9.302% // 120px
 		
 		@media all and (max-width: 1230px)
 			margin-right 8.5365% // 105px
@@ -107,7 +107,7 @@
 	border 1px solid #363636
 	
 	&__input
-		width 20.75em // 249px
+		width 20.66em // 248px
 		
 		padding-x(1.5em)
 		font-size .75em
