Del button translate

--- a/app/blocks/head/head.jade
+++ b/app/blocks/head/head.jade
@@ -53,7 +53,7 @@ head
 	meta(name='description' content=pageDescription || '')
 	meta(name='keywords' content=pageKeywords || '')
 
-	link(href='/assets/styles/app.min.css' rel='stylesheet')
+	link(href='./assets/styles/app.min.css' rel='stylesheet')
 
 	link(href="https://fonts.googleapis.com/css?family=Asap:500|Muli:300,400,600,700|Lato:300,400,700|Nunito+Sans:300,400,700|Poppins:400,500,600" rel="stylesheet")
 
