--- a/app/blocks/product/product.styl
+++ b/app/blocks/product/product.styl
@@ -47,15 +47,16 @@
 		line-height 2
 		color #fff
 		
+		margin-left -4.61em // 64.5px
 		padding .43em 1em // 6px 14px
-		transform translate(-50%)
+		// transform translate(-50%)
 		
 		&:hover
 			opacity .8
 		
 		&_cart
 			bottom 0
-			padding .71em .57em .28em // 10px 8px 0
+			padding .71em .57em .28em // 10px 8px 4px
 			background-color #000
 			
 			&:hover
