--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -11,7 +11,6 @@ html
 	font-size $base_font_size
 
 body
-	width 1440px
 	font-size $base_font_size_ems
 	// font-family 'Spectral', serif
 	// font-family 'Volkhov', serif
@@ -26,7 +25,7 @@ body
 	font-family 'Lato', sans-serif 
 	font-weight 400
 	line-height 1.5
-	background url('../images/shophia.jpg') no-repeat 0 0
+	// background url('../images/shophia.jpg') no-repeat 0 0
 		
 	@media all and (max-width: 1220px)
 		font-size $sm_font_size_ems
